--- a/views/cards.tmpl
+++ b/views/cards.tmpl
@@ -1,4 +1,4 @@
-<form action="" name="ADD_CAR" id="car">
+<form action="" name="ADD_CAR" id="cards">
             <h2>Карточка собственности</h2>
             <select name="OWNER">
                 <option value="default">Выбери</option>
