--- a/views/cards.tmpl
+++ b/views/cards.tmpl
@@ -28,4 +28,4 @@
             <input type="text" name="GOV_NUMBER" placeholder="Гос.Номер">
             <input type="text" name="VIN" placeholder="VIN">
     
-            <button>
+            <button>Сохранить</button>
