--- a/views/services.tmpl
+++ b/views/services.tmpl
@@ -1,1 +1,10 @@
 Just empty
+
+room71
+
+веб-серверы > PHP 7.0 и Ngninx
+php > 7.0
+СУБД Mysql 5.8 и 8.0
+NoSql MongoDB 6.0
+Веб-приложения Pg и Redis удаляем
+Программы разработки WinSCP
