--- a/views/services.tmpl
+++ b/views/services.tmpl
@@ -1,10 +1,12 @@
-Just empty
+<form action="" name="MODEL" id="models">
+            <h2>Услуги</h2>
+            <select name="OWNER" data-rel='CARD'></select>
+            <select name="CARD" ></select>
 
-room71
+            <input type="text" name="NAME" placeholder="Название услуги">
+            <input type="number" step="500" name="PRICE" placeholder="Стоимость">
+            <input type="number" name="COUNT" placeholder="Количество">
+            <input type="number" disabled name="TOTAL_PRICE" placeholder="Общая стоимость">
 
-веб-серверы > PHP 7.0 и Ngninx
-php > 7.0
-СУБД Mysql 5.8 и 8.0
-NoSql MongoDB 6.0
-Веб-приложения Pg и Redis удаляем
-Программы разработки WinSCP
+            <button>Сохранить</button>
+        </form>
