--- a/views/services.tmpl
+++ b/views/services.tmpl
@@ -1,11 +1,11 @@
-<form action="" name="MODEL" id="models">
+<form action="" name="SERVICE" id="services">
             <h2>Услуги</h2>
             <select name="OWNER" data-rel='CARD'></select>
             <select name="CARD" ></select>
 
             <input type="text" name="NAME" placeholder="Название услуги">
-            <input type="number" step="500" name="PRICE" placeholder="Стоимость">
-            <input type="number" name="COUNT" placeholder="Количество">
+            <input type="number" onchange="View.setMulti('TOTAL_PRICE', 'COUNT', this)" step="500" name="PRICE" placeholder="Стоимость">
+            <input type="number" onchange="View.setMulti('TOTAL_PRICE', 'PRICE', this)" name="COUNT" placeholder="Количество">
             <input type="number" disabled name="TOTAL_PRICE" placeholder="Общая стоимость">
 
             <button>Сохранить</button>
