--- a/views/models.html
+++ b/views/models.html
@@ -1,6 +1,8 @@
-<form action="" name="MODEL" id="models">
+<form action="" name="MODEL" id="models" method="POST">
             <h2>Модель</h2>
-            <select name="BRAND"></select>
+            <select name="BRAND">
+                <option value="1">Brand name</option>
+            </select>
             <input type="text" name="NAME" placeholder="Название модели">
     
             <button>Сохранить</button>
