--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="content">
+    <div class="content" id="root">
         <img src="/images/logo.png" width="60px;" alt="">
 
         <h1>Single Page Application</h1>
@@ -27,12 +27,12 @@
     <script src="/lang/mess.js"></script>
 
     <script src="/js/loc.js"></script>
-    <script src="/js/db.js"></script>
+    <!-- <script src="/js/db.js"></script> -->
     <script src="/js/dom.js"></script>
     <script src="/js/table.js"></script>
     <script src="/js/model.js"></script>
     <script src="/js/view.js"></script>
     <script src="/js/routing.js"></script>
-    <script src="/js/core.js"></script>
+    <script src="/js/core.js"></script>    
 </body>
 </html>
