--- a/front/src/components/table/style.css
+++ b/front/src/components/table/style.css
@@ -8,10 +8,32 @@
     color: #fff;
 }
 
+.simple-table thead tr th.sortable {
+    cursor: pointer;
+}
+
 .simple-table tbody tr:nth-child(even) {
     background-color: #1976d220;
 }
 
 .simple-table tbody tr td {
     padding: 5px 10px;
+}
+
+.simple-table button.drop {
+    border:1px solid #000;
+    background:#FFF url('./images/delete.png') no-repeat center;
+    width:28px;
+    height:28px;
+    margin:3px;
+    cursor:pointer;
+}
+
+.simple-table button.edit {
+    border:1px solid #000;
+    background:#FFF url('./images/pencil.png') no-repeat center;
+    width:28px;
+    height:28px;
+    margin:3px;
+    cursor:pointer;
 }
