--- a/front/src/components/form/style.css
+++ b/front/src/components/form/style.css
@@ -1,4 +1,4 @@
-form {
+form.editForm {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -11,12 +11,12 @@ form {
     height: max-content;
 }
 
-form label {
+form.editForm label {
     width:100%;
 }
 
-form input,
-form select {
+form.editForm input,
+form.editForm select {
     width: 100%;
     border-bottom: 1px solid #ccc;
     border-top: 0;
@@ -29,32 +29,32 @@ form select {
     display: block;
 }
 
-form input:focus,
-form select:focus {
+form.editForm input:focus,
+form.editForm select:focus {
     outline: none;
 }
 
-form select option {
+form.editForm select option {
     line-height: 36px;
     height: 36px;
     display: block;
 }
 
-form button {
+form.editForm button {
     background: #1976d2;
     color: #fff;
-    text-transform: uppercase;
+    text-transform.editForm: uppercase;
     font-weight: bold;
     border: none;
     padding: 12px 15px;
     cursor: pointer;
 }
 
-form button:hover {
+form.editForm button:hover {
     background: #1e88e5;
 }
 
-form button:disabled {
+form.editForm button:disabled {
     background:#999;
     cursor:not-allowed;
 }
